追加本地日志，XML、Json的序列化反序列化。

--- a/RM2/RM2.Framework/app.config
+++ b/RM2/RM2.Framework/app.config
@@ -12,4 +12,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="LogPath" value="E:\GitSource\WinformPermissionRM4\RM2\log"/>
+  </appSettings>
 </configuration>
