--- a/RM2/RM2.Framework/packages.config
+++ b/RM2/RM2.Framework/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="5.10.2" targetFramework="net461" />
   <package id="Unity.Abstractions" version="4.1.2" targetFramework="net461" />
