--- a/RM2/RM2.Framework/RM2.Framework.csproj
+++ b/RM2/RM2.Framework/RM2.Framework.csproj
@@ -77,6 +77,7 @@
     <None Include="app.config" />
     <None Include="Ice\AOP实现文档及调用.docx" />
     <None Include="packages.config" />
+    <None Include="Seven\本地日志以及序列化使用.docx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
