升级版AOP， 1. 只需继承IBaseController空接口 2. 实现类中需添加写日志特性 3. 代码在IceFilterAop文件中查看

--- a/RM2/RM2.Framework/RM2.Framework.csproj
+++ b/RM2/RM2.Framework/RM2.Framework.csproj
@@ -65,6 +65,11 @@
     <Compile Include="IceAop\IAopBehavior.cs" />
     <Compile Include="IceAop\IceExceptionBehavior.cs" />
     <Compile Include="IceAop\TestAopBehavior.cs" />
+    <Compile Include="IceFilterAop\AOPManager.cs" />
+    <Compile Include="IceFilterAop\IBaseController.cs" />
+    <Compile Include="IceFilterAop\LogFilterAttribute.cs" />
+    <Compile Include="IceFilterAop\OrderService.cs" />
+    <Compile Include="IceFilterAop\IOrderService.cs" />
     <Compile Include="Ice\CryptoMD5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
