--- a/RM2/RM2.Test/packages.config
+++ b/RM2/RM2.Test/packages.config
@@ -5,4 +5,6 @@
   <package id="Unity.Abstractions" version="4.1.2" targetFramework="net461" />
   <package id="Unity.Configuration" version="5.10.0" targetFramework="net461" />
   <package id="Unity.Container" version="5.10.2" targetFramework="net461" />
+  <package id="Unity.Interception" version="5.10.0" targetFramework="net461" />
+  <package id="Unity.Interception.Configuration" version="5.10.0" targetFramework="net461" />
 </packages>
