--- a/RM2/RM2.IService/RM2.IService.csproj
+++ b/RM2/RM2.IService/RM2.IService.csproj
@@ -41,7 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RM2.Model\RM2.Model.csproj">
+      <Project>{E3A342B7-5720-4933-9FD0-658EBCE82CCC}</Project>
+      <Name>RM2.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
