--- a/RM2/RM2.WinForm/RM2.WinForm.csproj
+++ b/RM2/RM2.WinForm/RM2.WinForm.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D351FA41-6F6A-4372-A20D-63F9AB7DBCE4}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RM2.Service</RootNamespace>
-    <AssemblyName>RM2.Service</AssemblyName>
+    <ProjectGuid>{68B4CCAF-4578-4E93-BCD0-E6D711FDE16E}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>RM2.WinForm</RootNamespace>
+    <AssemblyName>RM2.WinForm</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -37,12 +39,46 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserService.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RM2.Framework\RM2.Framework.csproj">
@@ -50,15 +86,15 @@
       <Name>RM2.Framework</Name>
     </ProjectReference>
     <ProjectReference Include="..\RM2.IService\RM2.IService.csproj">
-      <Project>{6FF5A222-525E-4C0B-9BCB-C208D46249F5}</Project>
+      <Project>{6ff5a222-525e-4c0b-9bcb-c208d46249f5}</Project>
       <Name>RM2.IService</Name>
     </ProjectReference>
     <ProjectReference Include="..\RM2.Model\RM2.Model.csproj">
-      <Project>{E3A342B7-5720-4933-9FD0-658EBCE82CCC}</Project>
+      <Project>{e3a342b7-5720-4933-9fd0-658ebce82ccc}</Project>
       <Name>RM2.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\RM2.Orm\RM2.Orm.csproj">
-      <Project>{AC9A2CF7-C2D8-4385-A66A-B8B7B9413D8E}</Project>
+      <Project>{ac9a2cf7-c2d8-4385-a66a-b8b7b9413d8e}</Project>
       <Name>RM2.Orm</Name>
     </ProjectReference>
   </ItemGroup>
