--- a/RM2/RM2.IService/RM2.IService.csproj
+++ b/RM2/RM2.IService/RM2.IService.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ILogService.cs" />
+    <Compile Include="IMenuService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IRoleService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RM2.Model\RM2.Model.csproj">
