--- a/RM2/RM2.Service/RM2.Service.csproj
+++ b/RM2/RM2.Service/RM2.Service.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LogService.cs" />
+    <Compile Include="MenuService.cs" />
+    <Compile Include="RoleService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
