修复 依赖注入 BUG

--- a/RM2/RM2.WinForm/CfgFiles/Unity.config
+++ b/RM2/RM2.WinForm/CfgFiles/Unity.config
@@ -18,20 +18,20 @@
         </register>
 
 
-        <register type="RM2.IService.IUserService,RM2.ILogService" mapTo="RM2.Service.UserService,RM2.LogService">
+        <register type="RM2.IService.ILogService,RM2.IService" mapTo="RM2.Service.LogService,RM2.Service">
           <interceptor type="InterfaceInterceptor"/>
           <interceptionBehavior type="RM2.Framework.IceAop.IceExceptionBehavior, RM2.Framework"/>
         </register>
 
 
-        <register type="RM2.IService.IUserService,RM2.IMenuService" mapTo="RM2.Service.UserService,RM2.MenuService">
+        <register type="RM2.IService.IMenuService,RM2.IService" mapTo="RM2.Service.MenuService,RM2.Service">
           <interceptor type="InterfaceInterceptor"/>
           <interceptionBehavior type="RM2.Framework.IceAop.IceExceptionBehavior, RM2.Framework"/>
         </register>
 
 
 
-        <register type="RM2.IService.IUserService,RM2.IRoleService" mapTo="RM2.Service.UserService,RM2.RoleService">
+        <register type="RM2.IService.IRoleService,RM2.IService" mapTo="RM2.Service.RoleService,RM2.Service">
           <interceptor type="InterfaceInterceptor"/>
           <interceptionBehavior type="RM2.Framework.IceAop.IceExceptionBehavior, RM2.Framework"/>
         </register>
