--- a/RM2/RM2.Framework/RM2.Framework.csproj
+++ b/RM2/RM2.Framework/RM2.Framework.csproj
@@ -65,32 +65,36 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="dbUtil.cs" />
-    <Compile Include="IceAop\AopExtend.cs" />
-    <Compile Include="IceAop\IAopBehavior.cs" />
-    <Compile Include="IceAop\IceExceptionBehavior.cs" />
-    <Compile Include="IceAop\TestAopBehavior.cs" />
-    <Compile Include="IceFilterAop\AOPManager.cs" />
-    <Compile Include="IceFilterAop\IBaseController.cs" />
-    <Compile Include="IceFilterAop\LogFilterAttribute.cs" />
-    <Compile Include="IceFilterAop\OrderService.cs" />
-    <Compile Include="IceFilterAop\IOrderService.cs" />
-    <Compile Include="Ice\CryptoMD5.cs" />
-    <Compile Include="LogHelper.cs" />
+    <Compile Include="AopServe\AopExtend.cs" />
+    <Compile Include="AopServe\IAopBehavior.cs" />
+    <Compile Include="AopServe\IceExceptionBehavior.cs" />
+    <Compile Include="AopServe\TestAopBehavior.cs" />
+    <Compile Include="AopServe2\AOPManager.cs" />
+    <Compile Include="AopServe2\IBaseController.cs" />
+    <Compile Include="AopServe2\LogFilterAttribute.cs" />
+    <Compile Include="AopServe2\OrderService.cs" />
+    <Compile Include="AopServe2\IOrderService.cs" />
+    <Compile Include="AssistServe\CryptoMD5.cs" />
+    <Compile Include="FeaturesServe\LogHelperAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Ice\AOP实现文档及调用.docx" />
+    <None Include="WorkFiles\1Framework布局.docx" />
+    <None Include="WorkFiles\AOP实现文档及调用.docx" />
     <None Include="packages.config" />
     <None Include="Seven\本地日志以及序列化使用.docx" />
-    <None Include="本地日志以及序列化使用.docx" />
+    <None Include="WorkFiles\本地日志以及序列化使用.docx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RM2.Orm\RM2.Orm.csproj">
       <Project>{AC9A2CF7-C2D8-4385-A66A-B8B7B9413D8E}</Project>
       <Name>RM2.Orm</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IocServe\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
